# atlas-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  atlas.yaml  pyproject.toml  requirements.txt
atlas/: __init__.py  budgets.py  cli.py  confidence.py  desktop.ini  relations.py  schema.py
atlas/cache/: desktop.ini
atlas/config/: atlas.yaml  desktop.ini
atlas/eyes/: __init__.py  database.py  desktop.ini  filesystem.py  git.py  remote_repo.py  web.py
atlas/index/: __init__.py  atlas.db  build.py  desktop.ini  sqlite_index.py
atlas/integration/: __init__.py
atlas/ledger/: __init__.py  events.py  projection.py  reader.py  reducers.py  validator.py  writer.py
atlas/ledger/events/: 2026-02-01.jsonl  2026-02-12.jsonl
atlas/maintenance/: __init__.py  archive.py  janitor.py
atlas/remote/: __init__.py  policy.py
atlas/salience/: __init__.py  desktop.ini  explain.py  scorer.py
atlas/session/: __init__.py  desktop.ini  session.py
atlas/sessions/: desktop.ini
atlas/state/: __init__.py  artifacts.snapshot.jsonl  desktop.ini  snapshots.py
atlas/thread/: __init__.py  conflicts.py  desktop.ini  relations.py  tags.py
atlas_core.egg-info/: PKG-INFO  SOURCES.txt
docs/: ARCHITECTURE.md  BACKBONE_MODE.md  BUDGETS.md  EVENTS.md  RELATIONS.md  SALIENCE.md  SCHEMA.md  SESSIONS.md
tests/: __init__.py  desktop.ini  test_filesystem_eye.py  test_projection.py  test_validator.py  test_writer.py
